--- a/Idiomatic/src/styles/StylesApartados/ApartadoCursos.css
+++ b/Idiomatic/src/styles/StylesApartados/ApartadoCursos.css
@@ -91,7 +91,7 @@
         margin:0 !important;
     }
     .MainApartado{
-        height:30vh;
+        /* height:30vh; */
         border-radius:25px;
         width:100% !important;
         margin-top:2%;
