--- a/Idiomatic/src/styles/Libro.css
+++ b/Idiomatic/src/styles/Libro.css
@@ -9,7 +9,8 @@
 		padding: 0;
 		/* background:rgba(119, 102, 198, 0.4); */
 		width: 100%;
-		height: 83vh;
+		/* height: 83vh; */
+		padding-top: 25%;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -325,16 +326,17 @@
 
 	.pageLecturaT{
 		background:rgba(119, 102, 198, 0.4);
-		height: 104vh;
+		height: 100vh;
 	}
 	.ContainerTitleLectura{
 		width: 90%;
-		height: 12vh;
+		/* height: 12vh; */
 		border-radius:25px;
 		background: rgba(255, 0, 0, 0.4); 
 		margin: 0;
 		max-width: 1440px !important;
 		margin-left:5%; 
+		padding-bottom: 5%;
 	}
 	.TitleImg{
 		float: left;
