--- a/Idiomatic/src/styles/NotificacionesHome.css
+++ b/Idiomatic/src/styles/NotificacionesHome.css
@@ -8,9 +8,10 @@
         margin-top: 5% !important;
         background:rgba(119, 102, 198, 0.3);
         width:100%;
-        height: 20vh;
+        /* height: 20vh; */
         border-Radius:50px;
         margin-bottom: 6%;
+        margin-bottom: 16%;
     }
 
     .TituloNoti{
@@ -37,6 +38,8 @@
     .ContenedorNoti{
         background: rgba(255, 199, 39, 0.7);
         position: relative !important;
+        /* margin-bottom: 45% !important; */
+        /* margin-top: 15%; */
         /* margin-top: 10%; */
         /* margin-bottom: 4%; */
     }
@@ -46,7 +49,7 @@
         right:0%;
         top:0;
         width:11%;
-        height:5vh;
+        /* height:5vh; */
         cursor:pointer;
     }
     .btnUser_NotificacionPage{
@@ -55,7 +58,7 @@
         right:1%;
         top:0;
         width:11%;
-        height:5vh;
+        /* height:5vh; */
     }
     .imgContPage{
         position:absolute;
@@ -112,7 +115,7 @@
         right:0;
         top:0;
         width:8%;
-        height:5vh;
+        /* height:5vh; */
         cursor:pointer;
     }
     .btnUser_NotificacionPage{
@@ -121,7 +124,7 @@
         right:0;
         top:0;
         width:7%;
-        height:5vh;
+        /* height:5vh; */
     }
 
     .imgContPage{
