--- a/Idiomatic/src/styles/StyleApartadoJuegos/AudioIA.css
+++ b/Idiomatic/src/styles/StyleApartadoJuegos/AudioIA.css
@@ -2,7 +2,8 @@
 
     .ContainerMainAudioIA{
         background: #E0DFFD;
-        height: 100vh;
+        /* height: 100vh; */
+        min-height: 100vh;
     }
     .ContainerTitleAudioIA{
         background: rgba(255, 194, 18, 0.65);
@@ -37,7 +38,7 @@
     }
     .ContainerTitleEjercicioAudioIA{
         background: rgba(255, 189, 0, 0.95);
-        height: 15vh;
+        /* height: 15vh; */
         border-radius: 22px;
         margin-top: 5%;
         border: 4px solid black;
@@ -49,7 +50,7 @@
     }
     .btnAudioIARecord{
         width: 70%;
-        height: 10vh;
+        /* height: 10vh; */
         font-size: 4vw !important;
         border-radius: 22px !important;
         /* color: black !important; */
@@ -60,7 +61,7 @@
         margin-top: 8% !important;
         position: relative;
         left: 15%;
-        height: 10vh;
+        /* height: 10vh; */
         font-size: 4vw !important;
         border-radius: 22px !important;
         /* color: black !important; */
@@ -70,14 +71,11 @@
 
 @media screen and (min-width:601px) and (max-width:1023px){
 
-}
-
-
-@media  (min-width:1024px){
-
+    
     .ContainerMainAudioIA{
         background: #E0DFFD;
-        height: 100vh;
+        /* height: 100vh; */
+        min-height: 100vh;
     }
     .ContainerTitleAudioIA{
         background: rgba(255, 194, 18, 0.65);
@@ -117,18 +115,85 @@
     }
     .btnAudioIARecord{
         width: 30%;
-        height: 10vh;
+        /* height: 10vh; */
         font-size: 25px !important;
         border-radius: 22px !important;
         /* color: black !important; */
         margin-left: 20% !important;   
+        font-size: 1.5vw !important;
     }
     .btnAudioIAStop{
         width: 30%;
-        height: 10vh;
+        /* height: 10vh; */
         font-size: 25px !important;
         border-radius: 22px !important;
         /* color: black !important; */
         margin-left: 0% !important;
+        font-size: 1.5vw !important;
+    }
+
+}
+
+
+@media  (min-width:1024px){
+
+    .ContainerMainAudioIA{
+        background: #E0DFFD;
+        /* height: 100vh; */
+        min-height: 100vh;
+    }
+    .ContainerTitleAudioIA{
+        background: rgba(255, 194, 18, 0.65);
+        border-radius: 25px;
+        height: 25vh;
+    }
+    .imgDogSpeak{
+        float: right;
+        position: relative;
+        bottom: 18%;
+        width:250px;
+    }
+    .TitleAudioIA{
+        padding-top: 5%; 
+    }
+    .SubtitleAudioIA{
+         padding-left: 5%;
+    }
+    .ContainerEjercicioAudioIA{
+        display: flex !important;
+    }
+    .imgDogLeftAudioIA{
+
+        margin-left: 8%;
+        width:20%;
+    }
+    .ContainerTitleEjercicioAudioIA{
+        background: rgba(255, 189, 0, 0.95);
+        height: 15vh;
+        border-radius: 22px;
+        margin-top: 7%;
+        border: 4px solid black;
+    }
+    .TitleEJercicioAudioIA{
+        text-align: center;
+        padding-top: 1%;
+    }
+    .btnAudioIARecord{
+        width: 30%;
+        /* height: 10vh; */
+        font-size: 25px !important;
+        border-radius: 22px !important;
+        /* color: black !important; */
+        margin-left: 20% !important;   
+        font-size: 1.5vw !important;
+    }
+    .btnAudioIAStop{
+        width: 30%;
+        /* height: 10vh; */
+        font-size: 25px !important;
+        border-radius: 22px !important;
+        /* color: black !important; */
+        margin-left: 0% !important;
+        font-size: 1.5vw !important;
     }
 }
