--- a/Idiomatic/src/styles/StyleHomeUser/UserCursos.css
+++ b/Idiomatic/src/styles/StyleHomeUser/UserCursos.css
@@ -4,7 +4,7 @@
 
         background:rgba(70, 70, 122, 1);
         width:100%;
-        height: 20vh;
+        /* height: 20vh; */
         border-radius:30px;
         margin-top:3.5%;
     }
@@ -26,7 +26,7 @@
         position:absolute;
         width: 25%;
         right:20px;
-        top:5%;
+        top:12%;
         /* min-height:25%; */
     }
     .subtitleB{
