--- a/Idiomatic/src/styles/StylesApartados/PageVideo.css
+++ b/Idiomatic/src/styles/StylesApartados/PageVideo.css
@@ -2,14 +2,15 @@
 
     .NavPageVideo{
         width:100%;
-        height:18vh;
+        /* height:18vh; */
         background:rgba(119, 102, 198, 0.4);
         margin:0;
         max-width:1440px !important;
+        padding-bottom: 4%;
     }
 
     .imgIconoPageVideo{
-        margin-top: 4vh;
+        margin-top: 1%;
         /* width: 25%; */
         float:left;
         margin-left:2%;
@@ -25,9 +26,10 @@
     }
     .ReactPlayerX{
         width: 80% !important;
+        height: auto;
         /* height: 100vh; */
         margin-left:11%;
-        margin-top:28%;
+        margin-top:18%;
     }
     
 }
