--- a/Idiomatic/src/styles/App.css
+++ b/Idiomatic/src/styles/App.css
@@ -346,7 +346,7 @@ body {
 }
 
 /* Media query para dispositivos móviles */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 800px) and (min-width: 300px) {
   /* Estilos específicos para móviles */
 
   .login-page {
@@ -362,6 +362,12 @@ body {
     margin: 0 auto;
   }
 
+  .new-here-heading {
+    color: #fff;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
   .social-login-text{
     font-size: 16px;
     margin-left: 0;
@@ -370,7 +376,7 @@ body {
   }
 
   .sign-in-heading {
-    font-size: 10px;
+    font-size: 6px;
     margin-top: 160px;
     margin-left: 0;
     text-align: center;
