Se protegieron las rutas del front y del backend

--- a/Idiomatic/src/styles/App.css
+++ b/Idiomatic/src/styles/App.css
@@ -352,7 +352,7 @@ body {
   .login-page {
     align-items: flex-start;
     min-height: 100vh;
-    background-image: url("/src/images/pruebaimg.png");
+    background-image: url("/images/pruebaimg.png");
 
   }
 
