--- a/Idiomatic/src/styles/ApartadosAjustes.css
+++ b/Idiomatic/src/styles/ApartadosAjustes.css
@@ -26,6 +26,60 @@
     .BtnSimplegDemo{
         left:4%;
     }
+    .ContainerMainBorrarCuenta{
+        background:rgba(224, 223, 253, 0.5);
+        border-radius:25px;
+        height:29vh;
+        padding-right:0;
+
+    }
+    .TitleMainBorrarCuenta{
+        
+        margin-bottom:2px;
+        display:inline;
+        margin-left:20%;
+        padding-bottom:35%;
+    }
+    .TitleNIvelBorrarCuenta{
+        display: none;
+        margin-bottom:2px;
+        /* display:inline; */
+        margin-left:8%;
+    }
+    .imgBorrarCuenta{
+        margin-top:0%;
+        padding-right:5%;
+        /* width:70%; */
+        max-width: 51%;
+        min-width: 76%;
+        height:50%; 
+    }
+    .microContainerInglesBorrarCuenta{
+        display: none;
+        padding-left:5%;
+        padding-right:5%;
+        box-shadow: -2px 0px  0px rgba(31, 25, 47, 0.5), 2px 0px 0px rgba(31, 25, 47, 0.5);
+    }
+    .InglesBorrarCuenta{
+        margin-top:6vh;
+    }
+    .microContainerA1BorrarCuenta{
+        display: none;
+        padding-left:5%;
+        padding-right:5%;
+        box-shadow: 2px 0px 0px rgba(31, 25, 47, 0.5);
+    }
+    .microContainerIconoBorrarCuenta{
+        width:60%;
+        padding-left:2%;
+    }
+    .btnBorrarCuenta{
+        width:100%;
+        height:58%;
+        border-radius:25px;
+        margin-top:49%;
+        cursor:pointer;
+    }
 }
 
 @media  screen and (min-width:601px) and (max-Width:1023px) {
@@ -59,6 +113,60 @@
         left:10%;
     }
 
+
+
+    
+
+
+    .ContainerMainBorrarCuenta{
+        background:rgba(224, 223, 253, 0.5);
+        border-radius:25px;
+        height:29vh;
+        padding-right:0;
+
+    }
+    .TitleMainBorrarCuenta{
+        margin-bottom:2px;
+        display:inline;
+        margin-left:40%;
+        padding-bottom:35%;
+    }
+    .TitleNIvelBorrarCuenta{
+        margin-bottom:2px;
+        display:inline;
+        margin-left:8%;
+    }
+    .imgBorrarCuenta{
+        margin-top:0%;
+        padding-right:5%;
+        width:30%;
+        height:50%; 
+    }
+    .microContainerInglesBorrarCuenta{
+        padding-left:5%;
+        padding-right:5%;
+        box-shadow: -2px 0px  0px rgba(31, 25, 47, 0.5), 2px 0px 0px rgba(31, 25, 47, 0.5);
+    }
+    .InglesBorrarCuenta{
+        margin-top:6vh;
+    }
+    .microContainerA1BorrarCuenta{
+        padding-left:5%;
+        padding-right:5%;
+        box-shadow: 2px 0px 0px rgba(31, 25, 47, 0.5);
+    }
+    .microContainerIconoBorrarCuenta{
+        width:20%;
+        padding-left:2%;
+    }
+    .btnBorrarCuenta{
+        width:100%;
+        height:30%;
+        border-radius:25px;
+        margin-top:49%;
+        cursor:pointer;
+    }
+
 }
 
 @media screen and (min-width:1024px){
@@ -88,6 +196,57 @@
     .BtnSimplegDemo{
         left:28%;
     }
+
+
+    .ContainerMainBorrarCuenta{
+        background:rgba(224, 223, 253, 0.5);
+        border-radius:25px;
+        height:29vh;
+        padding-right:0;
+
+    }
+    .TitleMainBorrarCuenta{
+        margin-bottom:2px;
+        display:inline;
+        margin-left:40%;
+        padding-bottom:35%;
+    }
+    .TitleNIvelBorrarCuenta{
+        margin-bottom:2px;
+        display:inline;
+        margin-left:8%;
+    }
+    .imgBorrarCuenta{
+        margin-top:0%;
+        padding-right:5%;
+        width:30%;
+        height:50%; 
+    }
+    .microContainerInglesBorrarCuenta{
+        padding-left:5%;
+        padding-right:5%;
+        box-shadow: -2px 0px  0px rgba(31, 25, 47, 0.5), 2px 0px 0px rgba(31, 25, 47, 0.5);
+    }
+    .InglesBorrarCuenta{
+        margin-top:6vh;
+    }
+    .microContainerA1BorrarCuenta{
+        padding-left:5%;
+        padding-right:5%;
+        box-shadow: 2px 0px 0px rgba(31, 25, 47, 0.5);
+    }
+    .microContainerIconoBorrarCuenta{
+        width:20%;
+        padding-left:2%;
+    }
+    .btnBorrarCuenta{
+        width:100%;
+        height:30%;
+        border-radius:25px;
+        margin-top:49%;
+        cursor:pointer;
+    }
+
 
 }
 
