--- a/Idiomatic/src/styles/Register.css
+++ b/Idiomatic/src/styles/Register.css
@@ -94,7 +94,7 @@
     width: 100% !important;
     height: 100% !important;
     max-width: 1100px;
-    background: url('/src/images/fonde_registro.png') no-repeat center center; /* Mantener la imagen de fondo */
+    background: url('/images/fonde_registro.png') no-repeat center center; /* Mantener la imagen de fondo */
     background-size: cover;
   }
   
