--- a/Idiomatic/src/styles/PasswordRec.css
+++ b/Idiomatic/src/styles/PasswordRec.css
@@ -40,6 +40,16 @@
     margin-top: 5rem; /* Espacio adicional si lo necesitas */
 }
 
+.confirmation-message {
+    margin-top: 15px;
+    color: #7766c6; /* Cambia a rojo si es un error */
+    font-size: 0.9rem;
+    font-family: Century Gothic;
+    font-weight: bold;
+    text-align: center;
+  }
+  
+
 /* Tarjeta de inicio de sesión */
 .login-card {
     display: flex;
